...
            android:id="@+id/toolbar"
            style="@style/Widget.Plaid.HomeToolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:actionBarSize"
            android:elevation="1dp"
            android:outlineProvider="none"
            android:title="@string/app_name"/>

        <ProgressBar
            android:id="@android:id/empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
...
            android:visibility="@{isLoading ? View.VISIBLE : View.GONE}"
            android:indeterminateTint="?android:colorAccent"
            android:indeterminateTintMode="src_in"/>

        <!-- filter drawer -->
        <android.support.v7.widget.RecyclerView
            android:id="@+id/trends"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="true"
            android:visibility="@{!isLoading ? View.VISIBLE : View.GONE}"
            android:background="@color/background_dark"
            android:paddingTop="?attr/actionBarSize"
...
