...
                android:id="@+id/search_background"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background_dark"/>

                <SearchView
                android:id="@+id/search_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/padding_normal"
                android:iconifiedByDefault="false"
                android:transitionGroup="true"/>

...
                android:textColor="@color/grey_200"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
            />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/search_results"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:scrollbarStyle="outsideOverlay"
                android:scrollbars="vertical"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
...
